--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -32,8 +32,7 @@
         <!--2-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="20"
+            android:layout_height="wrap_content"
             android:layout_margin="0dp"
             android:orientation="horizontal"
             android:padding="0dp"
@@ -64,7 +63,6 @@
             <!--3-->
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_weight="0"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
@@ -132,11 +130,9 @@
         <!--2-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_weight="15"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            >
+            android:layout_marginTop="5dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -167,13 +163,12 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_weight="10"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/engine_one"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -182,123 +177,129 @@
 
         <!--2-->
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_weight="20"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
 
             <!--3-->
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_weight="3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent">
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!--4-->
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/timedep_one"
+                        android:textSize="18sp"
+                        android:text="15:35"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/datedep_one"
+                        android:textSize="16sp"
+                        android:text="04 apr, Fri"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+                <!--4-->
 
                 <TextView
-                    android:id="@+id/timedep_one"
-                    android:textSize="18sp"
-                    android:text="15:35"
+                    android:id="@+id/namedep_one"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:textAlignment="textStart"
+                    android:gravity="center"
                     android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/datedep_one"
                     android:textSize="16sp"
-                    android:text="04 apr, Fri"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent"
+                    tools:ignore="RtlCompat" />
 
             </LinearLayout>
             <!--3-->
 
-            <TextView
-                android:id="@+id/namedep_one"
-                android:layout_weight="7"
-                android:layout_width="0dp"
-                android:textAlignment="textStart"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_height="match_parent"
-                tools:ignore="RtlCompat" />
-
-        </LinearLayout>
-        <!--2-->
-
-        <!--2-->
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_weight="8"
-            android:layout_height="0dp">
-
-            <TextView
-                android:text="@string/label_in_flight"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_weight="3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-
-            <TextView
-                android:id="@+id/duration_one"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_weight="7"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-        <!--2-->
-
-        <!--2-->
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_weight="20"
-            android:layout_height="0dp">
-
             <!--3-->
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_weight="3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent">
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/timearr_one"
-                    android:textSize="18sp"
+                    android:text="@string/label_in_flight"
                     android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/datearr_one"
                     android:textSize="16sp"
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/duration_one"
                     android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textSize="16sp"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
             <!--3-->
 
-            <TextView
-                android:id="@+id/namearr_one"
-                android:layout_weight="7"
-                android:layout_width="0dp"
-                android:textAlignment="textStart"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_height="match_parent"
-                tools:ignore="RtlCompat" />
+            <!--3-->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!--4-->
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/timearr_one"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/datearr_one"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+                <!--4-->
+
+                <TextView
+                    android:id="@+id/namearr_one"
+                    android:layout_weight="7"
+                    android:layout_width="0dp"
+                    android:textAlignment="textStart"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:layout_height="match_parent"
+                    tools:ignore="RtlCompat" />
+
+            </LinearLayout>
+            <!--3-->
 
         </LinearLayout>
         <!--2-->
@@ -309,8 +310,7 @@
             android:orientation="vertical"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_weight="45"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tvOneAgentInfo"
@@ -423,52 +423,59 @@
 
         <!--2-->
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_weight="10"
-            android:layout_height="0dp">
-
-            <TextView
-                android:text="Status:"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-
-            <TextView
-                android:id="@+id/rating_one"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-        <!--2-->
-
-        <!--2-->
-        <LinearLayout
-            android:id="@+id/llSeatsInfo"
             android:orientation="vertical"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_weight="30"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:text="@string/label_classes_available"
-                android:textSize="14sp"
-                android:textColor="@color/black"
+            <!--3-->
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/classes_one"
-                android:textSize="18sp"
+                <TextView
+                    android:text="Status:"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/rating_one"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+            <!--2-->
+
+            <!--3-->
+            <LinearLayout
+                android:id="@+id/llSeatsInfo"
+                android:orientation="vertical"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="@string/label_classes_available"
+                    android:textSize="14sp"
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/classes_one"
+                    android:textSize="18sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+            <!--3-->
 
         </LinearLayout>
         <!--2-->
@@ -495,8 +502,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="0dp"
             android:layout_width="match_parent"
-            android:layout_weight="25"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/btOneRequest"
@@ -535,30 +541,39 @@
         </LinearLayout>
         <!--2-->
 
-        <TextView
-            android:id="@+id/tvOneNewFeature"
-            android:padding="5dp"
-            android:text="New feature! Use the Request button to, clarify seat availability via this airline's agent. This can be helpful on the day of departure."
-            android:background="@drawable/box_green"
-            android:textColor="@color/black"
-            android:layout_marginBottom="0dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tvOneShareLoads"
-            android:textColor="@color/black"
-            android:padding="5dp"
-            android:text="Share loads data with other SA commuters and get premium for free."
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <!--2-->
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_weight="25"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvOneNewFeature"
+                android:padding="5dp"
+                android:text="New feature! Use the Request button to, clarify seat availability via this airline's agent. This can be helpful on the day of departure."
+                android:background="@drawable/box_green"
+                android:textColor="@color/black"
+                android:layout_marginBottom="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tvOneShareLoads"
+                android:textColor="@color/black"
+                android:padding="5dp"
+                android:text="Share loads data with other SA commuters and get premium for free."
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <!--2-->
+
+        <!--2-->
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/flyzed_one"
@@ -566,7 +581,7 @@
                 android:layout_marginTop="5dp"
                 android:textColor="@color/staff_blue"
                 android:textAlignment="center"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
