--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,7 +78,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="1px"
+                android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:background="@color/lightgray"
                 tools:ignore="ContentDescription" />
