--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -26,6 +26,18 @@
             android:layout_marginBottom="5dp"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/tvResCheckTransfer"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="Check transfer flights"
+            android:textAlignment="center"
+            android:textColor="@color/staff_blue"
+            android:textSize="18sp" />
+
         <!--2-->
         <LinearLayout
             android:id="@+id/llFlightLayout"
