--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -117,7 +117,8 @@
                 android:id="@+id/llFirstLayout"
                 android:orientation="horizontal"
                 android:padding="0dp"
-                android:layout_margin="0dp"
+                android:paddingStart="2dp"
+                android:paddingEnd="2dp"
                 app:flow_horizontalAlign="start"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
