--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -98,9 +98,8 @@
             android:background="@color/white"
             android:layout_width="match_parent"
             android:padding="0dp"
-            android:layout_weight="25"
             android:layout_margin="0dp"
-            android:layout_height="0dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/first_date_for_result"
