--- a/app/src/main/res/layout/fragment_credentials.xml
+++ b/app/src/main/res/layout/fragment_credentials.xml
@@ -147,23 +147,32 @@
 
             <TextView
                 android:id="@+id/tvCredID"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="20"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:text="ID for support: 3e6a4491db00f6f0f3f30fd38f516ab9"
                 android:textColor="@color/staff_another_gray"
                 android:textSize="12sp" />
 
-            <ImageView
-                android:id="@+id/ivCredID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_gravity="bottom"
-                android:layout_marginStart="10dp"
-                android:minWidth="20dp"
-                android:minHeight="20dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/copy" />
+                android:layout_weight="1"
+                android:layout_width="20dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/ivCredID"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="right"
+                    android:minWidth="20dp"
+                    android:minHeight="20dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/copy" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
