--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -97,7 +97,7 @@
                     android:padding="0dp"
                     android:layout_margin="0dp"
                     android:layout_width="match_parent"
-                    android:layout_height="70dp">
+                    android:layout_height="match_parent">
 
                     <!--5-->
                     <LinearLayout
@@ -135,10 +135,10 @@
                     <!--5-->
                     <LinearLayout
                         android:orientation="vertical"
-                        android:padding="0dp"
+                        android:paddingBottom="5dp"
                         android:layout_weight="2"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:textSize="10sp"
@@ -164,9 +164,16 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="0dp"
-                            android:layout_marginBottom="10dp"
                             android:textSize="16sp"
                             android:textColor="@color/black" />
+
+                        <TextView
+                            android:id="@+id/depdistance"
+                            android:textColor="@color/black"
+                            android:padding="0dp"
+                            android:textSize="12sp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
                     </LinearLayout>
                     <!--5-->
@@ -212,7 +219,7 @@
                         android:padding="0dp"
                         android:layout_weight="2"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/nextDay"
@@ -238,10 +245,17 @@
                             android:id="@+id/arrpoint"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
                             android:padding="0dp"
                             android:textSize="16sp"
                             android:textColor="@color/black" />
+
+                        <TextView
+                            android:id="@+id/arrdistance"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            android:padding="0dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
                     </LinearLayout>
                     <!--5-->
